--- a/research/ZCauchy.tex
+++ b/research/ZCauchy.tex
@@ -1,4 +1,4 @@
-\documentclass{elsarticle}
+\documentclass{article}
 \usepackage[english]{babel}
 \usepackage{geometry,amsmath,amssymb,graphicx,bbm,hyperref,theorem,latexsym}
 \geometry{letterpaper}
@@ -29,7 +29,8 @@
 \begin{document}
 
 \title{A Sequence of Cauchy Sequences Which Is Conjectured to Converge to the
-Imaginary Parts of the Zeros of the Riemann Zeta Function}
+Imaginary Parts of the Zeros of the Riemann Zeta Function and Proof That the
+Nontrivial Riemann Zeros are Simple}
 
 \author{
   Stephen Crowley <stephencrowley214@gmail.com>
