--- a/research/references.bib
+++ b/research/references.bib
@@ -1160,8 +1160,8 @@
 }
 
 @Article{z0t,
-  Title                    = {Transcendental equations satisfied by the individual zeros of Riemann ζ, Dirichlet and modular L-functions},
-  Author                   = {Guilherme França and André LeClair},
+  Title                    = {Transcendental equations satisfied by  the individual zeros of Riemann zeta, Dirichlet and modular L functions},
+  Author                   = {Guilherme Franca and Andre LeClair},
   Journal                  = {Communications in Number Theory and Physics},
   Year                     = {2015},
 
