working on multivariate stuff

--- a/research/references.bib
+++ b/research/references.bib
@@ -4204,4 +4204,19 @@ We model the arrival of mid-price changes in the E-mini S&P futures contract as 
   keywords = {Physics - Data Analysis, Statistics and Probability, Condensed Matter - Statistical Mechanics, Physics - Physics and Society, Quantitative Finance - Statistical Finance},
 }
 
+@Article{chp,
+  author    = {Brémaud, Pierre and Massoulié, Laurent},
+  title     = {Hawkes branching point processes without ancestors},
+  journal   = {J. Appl. Probab.},
+  year      = {2001},
+  volume    = {38},
+  number    = {1},
+  month     = {03},
+  pages     = {122--135},
+  doi       = {10.1239/jap/996986648},
+  url       = {https://doi.org/10.1239/jap/996986648},
+  fjournal  = {Journal of Applied Probability},
+  publisher = {Applied Probability Trust},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
