--- a/research/references.bib
+++ b/research/references.bib
@@ -4219,4 +4219,13 @@ We model the arrival of mid-price changes in the E-mini S&P futures contract as 
   publisher = {Applied Probability Trust},
 }
 
+@Book{milnor2006dynamics,
+  author    = {Milnor, John},
+  title     = {Dynamics in One Complex Variable},
+  year      = {2006},
+  edition   = {2nd},
+  series    = {Annals of Mathematics Studies 160},
+  publisher = {Princeton University Press},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
