--- a/research/hmm/ZCauchy.tex
+++ b/research/hmm/ZCauchy.tex
@@ -228,7 +228,7 @@ which counts the number of zeros \tmverbatim{on the critical line}.
   obtained from its solutions on the \tmverbatim{critical line} can be counted
   since they are enumerated by the integer $n$, leading to the counting
   function $N_0 (t)$ in Equation (\ref{N0}). The number of solutions obtained
-  on the \tmverbatim{critical line} would saturate counting function of the
+  on the \tmverbatim{critical line} would saturate the counting function of the
   number of solutions on the \tmverbatim{critical strip} so that $N (t) = N_0
   (t)$ and thus all of the non-trivial zeros of $\zeta$ would be enumerated in
   this manner. If there are zeros off of the critical line, or zeros with
