--- a/research/InverseCompensator.mw
+++ b/research/InverseCompensator.mw
@@ -295,6 +295,9 @@
 <Input>
 <Text-field prompt="&gt; " style="Maple Input" layout="Normal"><Equation executable="true" style="2D Input" input-equation="" display="LUklbXJvd0c2Iy9JK21vZHVsZW5hbWVHNiJJLFR5cGVzZXR0aW5nR0koX3N5c2xpYkdGJzYlLUkjbWlHRiQ2I1EhRicvJStleGVjdXRhYmxlR1EmZmFsc2VGJy8lLG1hdGh2YXJpYW50R1Enbm9ybWFsRic=">JSFH</Equation></Text-field>
 </Input>
+<Output>
+<Text-field style="2D Output" layout="Maple Output"><Equation executable="false" style="2D Output" display="LUkjbW5HNiMvSSttb2R1bGVuYW1lRzYiSSxUeXBlc2V0dGluZ0dJKF9zeXNsaWJHRic2JFEsMjA1LjU1MDg3MTlGJy8lLG1hdGh2YXJpYW50R1Enbm9ybWFsRic=">JCIrPigzYjAjISIo</Equation></Text-field>
+</Output>
 </Group>
 <Group labelreference="L410" drawlabel="true">
 <Input>
