--- a/research/ZCauchy.tex
+++ b/research/ZCauchy.tex
@@ -35,15 +35,15 @@ Imaginary Parts of the Zeros of the Riemann Zeta Function}
   Stephen Crowley <stephencrowley214@gmail.com>
 }
 
-\maketitle
-
 \begin{abstract}
   A sequence of Cauchy sequences which conjecturally converge to the Riemann
   zeros is constructed and related to the LeClair-Fran{\c c}a criteria for the
   Riemann hypothesis. 
 \end{abstract}
 
-\section{Preliminary Outline}
+\maketitle
+
+\section{Introduction}
 
 \subsection{Definitions}
 
